--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,129 +1,309 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center_horizontal"
+    android:background="@drawable/gradient_background"
     tools:context=".LoginActivity">
+
+    <ScrollView
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="35dp">
+
+        <LinearLayout
+            android:id="@+id/email_login_form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="10dp"
+            android:orientation="vertical">
+            <requestFocus/>
+
+            <com.loopeer.shadow.ShadowView
+                android:layout_marginTop="30dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center_horizontal"
+                app:cornerRadius="40dp"
+                app:shadowMargin="6dp"
+                app:shadowRadius="0dp"
+                app:backgroundColor="@color/blue4"
+                app:shadowColor="@color/backgroundColor">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/logo_cpik"
+                    app:layout_gravity="center"
+
+
+                    android:contentDescription="@string/logoDis" />
+
+
+            </com.loopeer.shadow.ShadowView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Welcome to LearnCodeOnline \n Login to continue."
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="serif"
+                tools:ignore="HardcodedText" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_marginTop="35dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <AutoCompleteTextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password"
+                    android:imeActionId="6"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <com.loopeer.shadow.ShadowView
+                android:layout_marginTop="18dp"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                app:shadowMargin="5dp"
+                android:elevation="5dp"
+                app:cornerRadius="2dp"
+                app:shadowColor="@color/backgroundColor2"
+                app:backgroundColor="@android:color/white"
+                app:shadowRadius="3dp">
+
+                <TextView
+                    android:id="@+id/sign_in_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:text="@string/action_sign_in"
+                    android:textStyle="bold" />
+
+            </com.loopeer.shadow.ShadowView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="forgot password?"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:padding="5dp"
+                android:layout_gravity="end"/>
+
+            <!--or-->
+            <LinearLayout
+                android:id="@+id/or_layout"
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="110dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="#b4b4b4"
+                    android:layout_height="0.5dp"/>
+
+                <TextView
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:text="Or"
+                    android:gravity="center"
+                    tools:ignore="HardcodedText" />
+
+                <View
+                    android:layout_width="110dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="#b4b4b4"
+                    android:layout_height="0.5dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:padding="2dp"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal">
+
+
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="#ccc"/>
+
+
+                <FrameLayout
+                    android:id="@+id/google_shadow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background2">
+
+                    <com.loopeer.shadow.ShadowView
+                        android:layout_width="70dp"
+                        android:layout_height="60dp"
+                        app:shadowMargin="6dp"
+                        app:cornerRadius="2dp"
+                        android:elevation="5dp"
+                        app:shadowColor="@color/backgroundColor2"
+                        app:shadowRadius="2dp">
+
+                        <ImageView
+                            android:id="@+id/google_sign_btn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:src="@drawable/google"
+                            android:elevation="5dp"
+                            app:layout_gravity="center"
+                            android:padding="3dp" />
+
+                    </com.loopeer.shadow.ShadowView>
+
+                </FrameLayout>
+
+
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="#ccc"/>
+
+
+
+                <FrameLayout
+                    android:id="@+id/facebook_shadow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background2">
+
+
+                    <com.loopeer.shadow.ShadowView
+                        android:layout_width="70dp"
+                        android:layout_height="60dp"
+                        app:shadowMargin="6dp"
+                        android:elevation="5dp"
+                        app:cornerRadius="2dp"
+                        app:shadowColor="@color/backgroundColor2"
+                        app:shadowRadius="2dp">
+
+                        <ImageView
+                            android:id="@+id/facebook_signin_btn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:src="@drawable/facebook"
+                            android:elevation="5dp"
+                            app:layout_gravity="center"
+                            android:padding="3dp" />
+
+                    </com.loopeer.shadow.ShadowView>
+
+
+                </FrameLayout>
+
+
+
+                <View
+                    android:layout_width="50dp"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="#ccc"/>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </ScrollView>
 
 
     <LinearLayout
-        android:id="@+id/email_login_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="30dp"
+        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="5dp"
+        android:orientation="horizontal">
 
-
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:autofillHints=""
-            android:hint="@string/prompt_email"
-            android:inputType="textEmailAddress"
-            android:maxLines="1" />
+            android:layout_gravity="bottom"
+            android:text="Are you new?"
+            tools:ignore="HardcodedText" />
 
-
-           <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:autofillHints=""
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:maxLines="1" />
-
-        <Button
-            android:id="@+id/email_sign_in_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/theme_button"
-            android:text="@string/sign_in"
-            android:textStyle="bold" />
-
-        <RelativeLayout
-            android:id="@+id/relLayout1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <TextView
-                android:id="@+id/link_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="@string/register"
-                android:textColor="@color/linkBlue"
-                android:textSize="16sp" />
-
-
-        </RelativeLayout>
+            android:text="Register"
+            android:padding="3dp"
+            android:onClick="openSignupPage"
+            android:layout_gravity="bottom"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="194dp"
-        android:layout_height="45dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+    <FrameLayout
+        android:id="@+id/background_blur_login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/login_loader"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        style="@style/AVLoadingIndicatorView"
+        app:indicatorName="BallPulseIndicator"
+        android:layout_centerInParent="true"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/email_login_form"
-        app:layout_constraintEnd_toEndOf="@+id/email_login_form"
-        app:layout_constraintHorizontal_bias="0.518"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/email_login_form"
-        app:layout_constraintVertical_bias="0.79" />
-  <!--  <EditText
-        android:id="@+id/user_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="228dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:indicatorColor="@android:color/white"/>
 
-    <EditText
-        android:id="@+id/user_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/user_id"
-        app:layout_constraintStart_toStartOf="@+id/user_id"
-        app:layout_constraintTop_toBottomOf="@+id/user_id" />
-
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="LOG IN"
-        app:layout_constraintEnd_toEndOf="@+id/user_password"
-        app:layout_constraintStart_toStartOf="@+id/user_password"
-        app:layout_constraintTop_toBottomOf="@+id/user_password" />
-        -->
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
